feat: change user password and system token
